--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,9 @@
 	<%= @article.title %>
 </h1>
 <p>
+	<%= @article.body %>
+</p>
+<p>
   Tags:
   <% @article.tags.each do |tag| %>
     <%= link_to tag.name, tag_path(tag) %>
@@ -19,10 +22,11 @@
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 
-<%= link_to "edit", edit_article_path(@article) %><br>
+<% if logged_in? %>
+	<%= link_to "edit", edit_article_path(@article) %><br>
 
-<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %><br>
+	<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %><br>
 
-<%= render partial: 'comments/form' %>
-
+	<%= render partial: 'comments/form' %>
+<% end %>
 <%= link_to "<< Back to Articles List", articles_path %>
