--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -4,7 +4,9 @@
   <% @tags.each do |tag| %>
     <li>
       <%= link_to tag.name, tag_path(tag), class: 'tag_name', id: "tag_#{tag.id}" %>
-      <%= link_to "delete", tag_path(tag), method: :delete, data: {confirm: "Really delete the tag?"}, id: tag.id %><br>
+      <% if logged_in? %>
+      	<%= link_to "delete", tag_path(tag), method: :delete, data: {confirm: "Really delete the tag?"}, id: tag.id %><br>
+      <% end %>
     </li>
   <% end %>
 </ul>
