--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -3,3 +3,13 @@
 </h1>
 
 <%= render partial: 'form' %>
+
+<%= form_for([ @article, @attachment ], html: {multipart: true}) do |f| %>
+  <p>
+    <%= f.label :image, "Attach a New Image" %><br />
+    <%= f.file_field :image %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
