--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,3 +11,5 @@
 <% if logged_in? %>
 	<%= link_to "Create New Article", new_article_path, class: 'new_article' %>
 <% end %>
+<br><br>
+<%= link_to "Create New Author", new_author_path %>
